tests/conformance/syntax/positive/comments_valid.ditt
module Syntax.Comments where

// line comment
postulate C : Cat
/* block comment */
id (x : C) : C = x
