tests/conformance/syntax/negative/comments_unclosed_block_invalid.ditt
module Syntax.CommentsBad where

postulate C : Cat
/* unclosed block comment
id (x : C) : C = x
